--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: seewave
 Type: Package
 Title: Time wave analysis and graphical representation 
-Version: 1.0
+Version: 1.1
 Date: 2006-01-05
 Author: Jérôme Sueur <jerome.sueur@ibaic.u-psud.fr>, 
-        Thierry Aubin <thierry.aubin@ibaic.u-psud.fr>
+        Thierry Aubin <thierry.aubin@ibaic.u-psud.fr>,
         Caroline Simonis-Sueur <csimonis@mnhn.fr>
 Maintainer: Jérôme Sueur <jerome.sueur@ibaic.u-psud.fr>
 Depends: R(>= 2.2.0)
 Suggests: rgl
 ZipData: no
-Description: seewave provides functions for analysing, manipulating, displaying, editing and synthesizing time waves (particularly sound).  This package processes time analysis (oscillograms and envelopes), spectral content, resonance quality factor, cross correlation and autocorrelation, zero-crossing, dominant frequency, 2D and 3D spectrograms, 2D and 3D Wigner-Ville distributions.
+Description: seewave provides functions for analysing, manipulating, displaying, editing and synthesizing time waves (particularly sound).  This package processes time analysis (oscillograms and envelopes), spectral content, resonance quality factor, cross correlation and autocorrelation, zero-crossing, dominant frequency, 2D and 3D spectrograms.
 License: GPL version 2 or newer
-Packaged: Fri Mar 10 15:21:01 2006; hornik
+Packaged: Thu Apr 20 11:13:51 2006; Jérôme
