--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: seewave
 Type: Package
 Title: Time wave analysis and graphical representation 
-Version: 1.3
-Date: 2006-01-05
-Author: Jérôme Sueur <jerome.sueur@ibaic.u-psud.fr>, 
+Version: 1.4
+Date: 2006-09-12
+Author: Jérôme Sueur <jerome.sueur@univ-tours.fr>, 
         Thierry Aubin <thierry.aubin@ibaic.u-psud.fr>,
         Caroline Simonis-Sueur <csimonis@mnhn.fr>
-Maintainer: Jérôme Sueur <jerome.sueur@ibaic.u-psud.fr>
+Maintainer: Jérôme Sueur <jerome.sueur@univ-tours.fr>
 Webpage: http://sueur.jerome.neuf.fr/seewave.html
 Depends: R(>= 2.2.0)
-Suggests: rgl
+Suggests: rgl, sound
 ZipData: no
 Description: seewave provides functions for analysing, manipulating, displaying, editing and synthesizing time waves (particularly sound).  This package processes time analysis (oscillograms and envelopes), spectral content, resonance quality factor, cross correlation and autocorrelation, zero-crossing, dominant frequency, 2D and 3D spectrograms.
 License: GPL version 2 or newer
-Packaged: Sat Oct  7 11:51:52 2006; Propriétaire
+Packaged: Sat Dec  9 17:27:28 2006; Propriétaire
