--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,17 @@
 Package: seewave
 Type: Package
 Title: Time wave analysis and graphical representation 
-Version: 1.4.2
-Date: 2007-19-02
+Version: 1.4.3
+Date: 2007-07-19
 Author: Jérôme Sueur <jerome.sueur@univ-tours.fr>, 
-        Thierry Aubin <thierry.aubin@ibaic.u-psud.fr>,
+        Thierry Aubin <thierry.aubin@u-psud.fr>,
         Caroline Simonis-Sueur <csimonis@mnhn.fr>
-Maintainer: Jérôme Sueur <jerome.sueur@univ-tours.fr>
+Maintainer: Jérôme Sueur <sueur.jerome@neuf.fr>
 Webpage: http://sueur.jerome.neuf.fr/seewave.html
 Depends: R(>= 2.2.0)
 Suggests: rgl, sound
 ZipData: no
 Description: seewave provides functions for analysing, manipulating, displaying, editing and synthesizing time waves (particularly sound).  This package processes time analysis (oscillograms and envelopes), spectral content, resonance quality factor, cross correlation and autocorrelation, zero-crossing, dominant frequency, 2D and 3D spectrograms.
+Encoding: latin1
 License: GPL version 2 or newer
-Packaged: Mon Feb 19 18:49:56 2007; Propriétaire
+Packaged: Thu Jul 19 13:58:12 2007; hornik
