--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: seewave
 Type: Package
 Title: Time wave analysis and graphical representation 
-Version: 1.4.7
-Date: 2008-02-25
-Author: Jérôme Sueur <sueur@mnhn.fr>, 
+Version: 1.4.8
+Date: 2008-04-14
+Author: Jerome Sueur <sueur@mnhn.fr>, 
         Thierry Aubin <thierry.aubin@u-psud.fr>,
         Caroline Simonis <csimonis@mnhn.fr>
-Maintainer: Jérôme Sueur <sueur@mnhn.fr>
+Maintainer: Jerome Sueur <sueur@mnhn.fr>
 Webpage: http://sueur.jerome.neuf.fr/seewave.html
 Depends: R(>= 2.2.0), sound
 Encoding: latin1
-Suggests: rgl, rpanel, tcltk
+Suggests: rgl, rpanel, tcltk, signal
 ZipData: no
-Description: seewave provides functions for analysing, manipulating, displaying, editing and synthesizing time waves (particularly sound).  This package processes time analysis (oscillograms and envelopes), spectral content, resonance quality factor, cross correlation and autocorrelation, zero-crossing, dominant frequency, 2D and 3D spectrograms and many other analyses.
+Description: seewave provides functions for analysing, manipulating, displaying, editing and synthesizing time waves (particularly sound).  This package processes time analysis (oscillograms and envelopes), spectral content, resonance quality factor, cross correlation and autocorrelation, zero-crossing, dominant frequency, analytic signal, frequency coherence, 2D and 3D spectrograms and many other analyses.
 License: GPL (>= 2)
 URL: http://sueur.jerome.neuf.fr/seewave.html
-Packaged: Mon Feb 25 17:09:02 2008; Administrateur
+Packaged: Mon Apr 14 13:32:13 2008; root
