--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,17 @@
 Package: seewave
 Type: Package
 Title: Time wave analysis and graphical representation
-Version: 1.5.5
-Date: 2009-6-26
+Version: 1.5.6
+Date: 2009-11-13
 Author: Jerome Sueur <sueur@mnhn.fr>, Thierry Aubin
         <thierry.aubin@u-psud.fr>, Caroline Simonis <csimonis@mnhn.fr>
 Maintainer: Jerome Sueur <sueur@mnhn.fr>
 Webpage: http://sueur.jerome.perso.neuf.fr/seewave.html
-Depends: R(>= 2.2.0), sound
+Depends: R(>= 2.2.0)
 Encoding: latin1
 SystemRequirements: FLAC
-Suggests: rgl, rpanel, tcltk, signal, tuneR, audio
+Imports: tuneR, rgl, rpanel, tcltk,
+Suggests: audio, sound
 ZipData: no
 Description: seewave provides functions for analysing, manipulating,
         displaying, editing and synthesizing time waves (particularly
@@ -21,6 +22,6 @@ Description: seewave provides functions for analysing, manipulating,
         and 3D spectrograms and many other analyses.
 License: GPL (>= 2)
 URL: http://sueur.jerome.perso.neuf.fr/seewave.html
-Packaged: 2009-06-26 08:12:10 UTC; root
+Packaged: 2009-11-13 10:28:00 UTC; jeroline
 Repository: CRAN
-Date/Publication: 2009-06-26 17:53:24
+Date/Publication: 2009-11-13 14:37:18
