--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: seewave
 Type: Package
 Title: Time wave analysis and graphical representation
-Version: 1.5.6
-Date: 2009-11-13
+Version: 1.5.7
+Date: 2010-03-15
 Author: Jerome Sueur <sueur@mnhn.fr>, Thierry Aubin
         <thierry.aubin@u-psud.fr>, Caroline Simonis <csimonis@mnhn.fr>
 Maintainer: Jerome Sueur <sueur@mnhn.fr>
-Webpage: http://sueur.jerome.perso.neuf.fr/seewave.html
+Webpage: http://rug.mnhn.fr/seewave
 Depends: R(>= 2.2.0)
 Encoding: latin1
 SystemRequirements: FLAC
@@ -21,7 +21,7 @@ Description: seewave provides functions for analysing, manipulating,
         dominant frequency, analytic signal, frequency coherence, 2D
         and 3D spectrograms and many other analyses.
 License: GPL (>= 2)
-URL: http://sueur.jerome.perso.neuf.fr/seewave.html
-Packaged: 2009-11-13 10:28:00 UTC; jeroline
+URL: http://rug.mnhn.fr/seewave
+Packaged: 2010-03-15 12:01:04 UTC; jerome
 Repository: CRAN
-Date/Publication: 2009-11-13 14:37:18
+Date/Publication: 2010-03-15 15:51:00
