--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: seewave
 Type: Package
 Title: Time wave analysis and graphical representation
-Version: 1.5.8
-Date: 2010-06-15
+Version: 1.5.9
+Date: 2010-09-01
 Author: Jerome Sueur <sueur@mnhn.fr>, Thierry Aubin
         <thierry.aubin@u-psud.fr>, Caroline Simonis <csimonis@mnhn.fr>
 Maintainer: Jerome Sueur <sueur@mnhn.fr>
 Webpage: http://rug.mnhn.fr/seewave
 Depends: R(>= 2.2.0)
 Encoding: latin1
-SystemRequirements: FLAC
-Imports: tuneR, rgl, rpanel, tcltk,
+SystemRequirements: FLAC, FFTW
+Imports: fftw, rgl, rpanel, tcltk, tuneR,
 Suggests: audio, sound
 ZipData: no
 Description: seewave provides functions for analysing, manipulating,
@@ -22,6 +22,6 @@ Description: seewave provides functions for analysing, manipulating,
         and 3D spectrograms and many other analyses.
 License: GPL (>= 2)
 URL: http://rug.mnhn.fr/seewave
-Packaged: 2010-06-15 12:22:12 UTC; jerome
+Packaged: 2010-09-01 10:10:19 UTC; jerome
 Repository: CRAN
-Date/Publication: 2010-06-15 14:33:24
+Date/Publication: 2010-09-01 17:52:52
