--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: seewave
 Type: Package
 Title: Time wave analysis and graphical representation
-Version: 1.6.4
-Date: 2012-06-25
+Version: 1.6.5
+Date: 2012-04-12
 Author: Jerome Sueur <sueur@mnhn.fr>, Thierry Aubin, Caroline Simonis
 Maintainer: Jerome Sueur <sueur@mnhn.fr>
 Webpage: http://rug.mnhn.fr/seewave
@@ -21,6 +21,6 @@ Description: seewave provides functions for analysing, manipulating,
         and 3D spectrograms and many other analyses.
 License: GPL (>= 2)
 URL: http://rug.mnhn.fr/seewave
-Packaged: 2012-06-28 12:55:38 UTC; jerome
+Packaged: 2012-12-12 14:29:15 UTC; root
 Repository: CRAN
-Date/Publication: 2012-06-28 14:11:36
+Date/Publication: 2012-12-12 17:25:02
