--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,26 +1,21 @@
 Package: seewave
 Type: Package
-Title: Time wave analysis and graphical representation
-Version: 1.6.7
-Date: 2013-09-04
-Author: Jerome Sueur <sueur@mnhn.fr>, Thierry Aubin, Caroline Simonis
+Title: Sound analysis and synthesis
+Version: 1.7.0
+Date: 2013-07-12
+Author: Jerome Sueur <sueur@mnhn.fr>,
+        Thierry Aubin,
+        Caroline Simonis
 Maintainer: Jerome Sueur <sueur@mnhn.fr>
-Depends: R(>= 2.15.0)
 Encoding: UTF-8
 SystemRequirements: FFTW, LIBSNDFILE
-Imports: fftw, rgl, rpanel, tcltk, tuneR,
-Suggests: audio, sound
+Imports: fftw, tuneR
+Suggests: audio, ggplot2, rgl, rpanel
 ZipData: no
-Description: seewave provides functions for analysing, manipulating,
-        displaying, editing and synthesizing time waves (particularly
-        sound).  This package processes time analysis (oscillograms and
-        envelopes), spectral content, resonance quality factor,
-        entropy, cross correlation and autocorrelation, zero-crossing,
-        dominant frequency, analytic signal, frequency coherence, 2D
-        and 3D spectrograms and many other analyses.
+Description: seewave provides functions for analysing, manipulating, displaying, editing and synthesizing time waves (particularly sound).  This package processes time analysis (oscillograms and envelopes), spectral content, resonance quality factor, entropy, cross correlation and autocorrelation, zero-crossing, dominant frequency, analytic signal, frequency coherence, 2D and 3D spectrograms and many other analyses.
 License: GPL (>= 2)
 URL: http://rug.mnhn.fr/seewave
-Packaged: 2013-04-09 12:46:47 UTC; root
+Packaged: 2013-07-12 12:01:07 UTC; root
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-04-09 16:57:29
+Date/Publication: 2013-07-12 16:54:40
