--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: seewave
 Type: Package
 Title: Sound analysis and synthesis
-Version: 1.7.3
-Date: 2014-01-27
-Author: Jerome Sueur <sueur@mnhn.fr>,
-        Thierry Aubin,
-        Caroline Simonis
+Version: 1.7.6
+Date: 2014-09-11
+Author: Jerome Sueur <sueur@mnhn.fr>, Thierry Aubin, Caroline Simonis, \cr
+        with contributions of Ethan C. Brown, Camille Desjonqueres,
+        Amandine Gasc, Stefanie LaZerte, Jonathan Lees, Laurent Lellouch, 
+        Sandrine Pavoine, Luis J. Villanueva-Rivera, Zev Ross, Carl G. Witthoft.
 Maintainer: Jerome Sueur <sueur@mnhn.fr>
 Encoding: UTF-8
 SystemRequirements: FFTW, LIBSNDFILE
@@ -15,7 +16,7 @@ ZipData: no
 Description: seewave provides functions for analysing, manipulating, displaying, editing and synthesizing time waves (particularly sound).  This package processes time analysis (oscillograms and envelopes), spectral content, resonance quality factor, entropy, cross correlation and autocorrelation, zero-crossing, dominant frequency, analytic signal, frequency coherence, 2D and 3D spectrograms and many other analyses.
 License: GPL (>= 2)
 URL: http://rug.mnhn.fr/seewave
-Packaged: 2014-01-27 10:06:54 UTC; root
+Packaged: 2014-09-12 10:50:57 UTC; jerome
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-01-27 12:11:24
+Date/Publication: 2014-09-12 16:38:54
